--- a/site/source/stylesheets/_navbar.scss
+++ b/site/source/stylesheets/_navbar.scss
@@ -28,6 +28,12 @@
     padding: 0;
     padding-right: $baseline;
   }
+
+  &--mobile img {
+    height: 23px;
+    width: auto;
+    padding: 16px;
+  }
 }
 
 .mdl-layout__obfuscator {
