--- a/site/source/layouts/layout.html.haml
+++ b/site/source/layouts/layout.html.haml
@@ -8,7 +8,7 @@
       %link{:rel => 'alternate', :href => translated_url(lang, current_page.data.id) , :hreflang => lang}
   %body
     = partial(:'layouts/main/nav')
-    %main.mdl-layout__content
+    %main.mdl-layout__content.content__container
       -#%header
       -#  %h1
       -#    -if current_page.data.dont_translate_header?
