--- a/site/source/layouts/main/_nav.html.haml
+++ b/site/source/layouts/main/_nav.html.haml
@@ -7,9 +7,13 @@
       .mdl-layout-spacer
       %nav.mdl-navigation.mdl-layout--large-screen-only
         =partial("layouts/main/nav_links")
+        =partial("layouts/main/language_choice")
   .mdl-layout__drawer{:style => "position: fixed;"}
     %header
       %h1
         %span.mdl-layout-title MONTAŻOWNIA TATUAŻU
     %nav.mdl-navigation
       =partial("layouts/main/nav_links")
+      =partial("layouts/main/language_choice-mobile")
+
+
