--- a/site/source/stylesheets/_portfolio.scss
+++ b/site/source/stylesheets/_portfolio.scss
@@ -1,25 +1,23 @@
 @import "variables";
 
 .portfolio-wrapper {
-  max-width: 1200px;
-  padding: 0 30px;
-  column-count: 5;
-  column-gap: 0;
-  @media screen and (max-width: 768px) {
-    max-width: 600px;
-    column-count: 3;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   &__element {
-
-    &:first-child {
-      margin-top: 0;
-    }
-
     margin: 10px 10px;
     transition: 0.3s transform ease;
     cursor: pointer;
     position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3f3f3;
+    border: 4px solid lightgrey;
 
     &:after {
       content: '';
@@ -40,7 +38,7 @@
     }
 
     img {
-      max-width: 170px;
+      height: 350px;
     }
   }
 }
