Add locals to calendar

--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -7,6 +7,9 @@ additional_stylesheets:
 additional_javascripts:
   - "lib/Moment/moment.min"
   - "lib/FullCalendar/fullcalendar.min"
+  - "lib/FullCalendar/en-gb"
+  - "lib/FullCalendar/pl"
+  - "lib/FullCalendar/es"
   - "lib/gCal/gcal.min"
   - "calendar.js"
 ---
