Update FAQ layout

--- a/site/source/layouts/main/_head.html.haml
+++ b/site/source/layouts/main/_head.html.haml
@@ -8,7 +8,7 @@
 %meta{'name' => 'ICBM', 'content' => '52.39792742; 16.92453504'}
 %meta{'name' => 'generator', 'content' => 'middleman'}
 %link{:rel => :stylesheet, :type => :"text/css",
-      :href => "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700"}
+      :href => "http://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700"}
 %link{:rel => :stylesheet, :type => :"text/css",
       :href => "https://fonts.googleapis.com/icon?family=Material+Icons"}
 %link{:rel => 'icon', :type => 'image/png', :sizes => '16x16', :href => '/images/favicons/favicon-16x16.png'}
