--- a/site/source/stylesheets/_variables.scss
+++ b/site/source/stylesheets/_variables.scss
@@ -2,5 +2,8 @@ $baseline: 7px;
 
 //Colors
 $page-primary: #16f6ed;
+$page-primary--darker: #00c2bb;
+$page-primary--lighter: #72ffff;
+$page-secondary: #E1E1E1;
 $default-light: #FFF;
 $default-dark: #000;
