--- a/site/source/stylesheets/_faq.scss
+++ b/site/source/stylesheets/_faq.scss
@@ -22,6 +22,7 @@
       align-items: center;
       transition: transform 0.3s ease-in;
       color: $page-primary--darker;
+      user-select: none;
 
       &--active {
         transform: rotate(45deg);
