--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -8,8 +8,8 @@ additional_javascripts:
 ---
 %section
   %header
-    %h2
-      %strong Tutaj odpowiemy na wszystkie wasze pytania
+    %h3.section__header PYTANIA I ODPOWIEDZI
+  .section__header-separotor
   -get_faq_list.each do |item|
     %article.question
       %h4.question__title.showAnswer
