--- a/site/source/stylesheets/_calendar.scss
+++ b/site/source/stylesheets/_calendar.scss
@@ -1,10 +1,30 @@
 @import "variables";
 
+.contact {
+  margin-bottom: 6em;
+
+  &__element {
+    display: flex;
+    align-items: center;
+  }
+
+  &__social-icons {
+    padding: 5px 10px;
+  }
+
+  img.contact__social-icons {
+    height: 23px;
+  }
+}
+
 #calendar {
-  display: block;
-  width: 800px;
   margin: auto;
-  background-color: white;
+}
+
+.fc-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .fc .fc-toolbar>*>* {
@@ -22,11 +42,17 @@
   background: transparent;
 }
 
-.fc-center {
+.fc-left {
   cursor: default;
   color: black;
   h2 {
     text-transform: capitalize;
+    font-size: 2em;
+  }
+  @media (max-width: 425px) {
+    h2 {
+      font-size: 1.9em;
+    }
   }
 }
 
@@ -36,6 +62,7 @@
 
 .fc-day-header {
   color: black;
+  text-transform: capitalize;
 }
 
 .fc-day-number {
@@ -43,7 +70,7 @@
 }
 
 .fc-day-top {
-  background-color: rgba(0,0,0,0.1) !important;
+  background-color: rgba(0,0,0,0.03) !important;
 }
 
 .fc-unthemed .fc-content {
@@ -51,7 +78,7 @@
 }
 
 .fc-bg td {
-  background-color: #dadada;
+  background-color: #f3f3f3;
 }
 
 .fc-bg td.day--busy {
