--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -6,7 +6,6 @@ body {
   letter-spacing: 1.2px;
   background-color: $default-light;
   color: $default-dark;
-  text-align: center;
 }
 
 a {
@@ -25,6 +24,9 @@ button {
 }
 
 .content__container {
+  display: block;
+  padding-top: 70px;
+  min-height: 100vh;
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
@@ -47,11 +49,23 @@ button {
   }
 }
 
+.section__header-separotor {
+  background: linear-gradient(45deg, $page-primary 0%, $page-primary--darker 100%);
+  height: 2px;
+  width: 25vw;
+  margin: 0 auto 24px auto;
+}
+
 .home__section {
   height: 100vh;
 }
 
+.section__header {
+  text-align: center;
+}
+
 .welcome-wrapper {
+  margin-top: -70px;
   position: relative;
   display: flex;
   align-items: center;
@@ -86,7 +100,7 @@ button {
 }
 
 .anchor {
-  color: $page-primary
+  color: $page-primary--darker;
 }
 
 @import "navbar";
