--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -49,11 +49,16 @@ button {
   }
 }
 
+.valign-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .section__header-separotor {
   background: linear-gradient(45deg, $page-primary 0%, $page-primary--darker 100%);
   height: 2px;
   width: 25vw;
-  margin: 0 auto 24px auto;
+  margin: 0 auto 7em auto;
 }
 
 .home__section {
@@ -67,8 +72,6 @@ button {
 .welcome-wrapper {
   margin-top: -70px;
   position: relative;
-  display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
 }
@@ -107,3 +110,4 @@ button {
 @import "portfolio";
 @import "calendar";
 @import "faq";
+@import "footer";
