Fix mobile drawer

--- a/site/source/layouts/main/_nav.html.haml
+++ b/site/source/layouts/main/_nav.html.haml
@@ -8,7 +8,7 @@
       %nav.mdl-navigation.mdl-layout--large-screen-only
         =partial("layouts/main/nav_links")
         =partial("layouts/main/language_choice")
-  .mdl-layout__drawer{:style => "position: fixed;"}
+  .mdl-layout__drawer.mdl-typography--text-center{:style => "position: fixed;"}
     %header
       %h1
         %span.mdl-layout-title MONTAŻOWNIA TATUAŻU
