--- a/site/source/stylesheets/_variables.scss
+++ b/site/source/stylesheets/_variables.scss
@@ -7,3 +7,7 @@ $page-primary--lighter: #72ffff;
 $page-secondary: #E1E1E1;
 $default-light: #FFF;
 $default-dark: #000;
+
+//Calendar colors
+$free-term: $page-primary;
+$busy-term: #f3f3f3;
