Adding hrs instead of borders for questions

--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -18,5 +18,4 @@ additional_javascripts:
       %p.question__answer.answerShown=item.answer
       -if item.link
         %span.anchor=link_to(item.link.info, item.link.address, target: "_blank")
-
-        //make this span as a content of $p.question__answer.answerShown
+    %hr.question__separator
