--- a/site/source/stylesheets/_faq.scss
+++ b/site/source/stylesheets/_faq.scss
@@ -1,8 +1,7 @@
 @import "variables";
 
 .question {
-  border: 2px solid $page-secondary;
-  border-bottom: none;
+  border: none;
   padding: 1em;
 
   &__title {
@@ -36,8 +35,4 @@
     text-align: left;
     padding: 1.2em 2.5em 1em 2.5em;
   }
-}
-
-.question:last-of-type {
-  border-bottom: 2px solid $page-secondary;
 }
