Centering image and button in dialog

--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -21,7 +21,7 @@ additional_javascripts:
         -i+=1
 
 %dialog.mdl-dialog.dialog-content
-  .mdl-dialog__content
+  .mdl-dialog__content.centered-wrapper
     %img.dialog-image.dialogImg
-  .mdl-dialog__actions
+  .mdl-dialog__actions.centered-wrapper
     %button.mdl-button.closeDialog{:type => "button"}=t("dialogs.close")
