--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -35,5 +35,8 @@ additional_javascripts:
       %span.legend__text__el Wolny termin
       .legend__color__el.legend__color__el--busy
       %span.legend__text__el Zajęty termin
-  %div
+  %figure
     #calendar
+  %figure
+    #map
+    = partial(:'localizable/partials/map')
