--- a/site/source/stylesheets/_calendar.scss
+++ b/site/source/stylesheets/_calendar.scss
@@ -46,6 +46,14 @@
   margin: auto;
 }
 
+#map {
+  margin: auto;
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+}
+
+
 .fc-toolbar {
   display: flex;
   justify-content: space-between;
