Adding partialy free events

--- a/site/source/stylesheets/_calendar.scss
+++ b/site/source/stylesheets/_calendar.scss
@@ -110,6 +110,10 @@
   background-color: $free-term;
 }
 
+.fc-bg td.day--partialy--free {
+  background-color: $free-partialy-term;
+}
+
 .information-wrapper{
   display: flex;
 }
