Adding messanger link in contact

--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -28,7 +28,7 @@ additional_javascripts:
         %span montazownia.tattoo@gmail.com
       %div.contact__element
         =image_tag("site/facebook-icon.png", class: "contact__social-icons")
-        =link_to("Montażownia", "https://www.facebook.com/Montazownia/", class: "anchor")
+        =link_to("Montażownia", "https://m.me/Montazownia", class: "anchor")
     %article.legend.information-right
       %h6 Legenda
       .legend__color
