--- a/site/source/layouts/main/_nav.html.haml
+++ b/site/source/layouts/main/_nav.html.haml
@@ -3,7 +3,7 @@
     .mdl-layout__header-row
       %header
         %h1
-          %span.mdl-layout-title MONTAŻOWNIA TATUAŻU
+          %span.mdl-layout-title.nav-bar__title MONTAZOWNIA
       .mdl-layout-spacer
       %nav.mdl-navigation.mdl-layout--large-screen-only
         =partial("layouts/main/nav_links")
@@ -11,7 +11,7 @@
   .mdl-layout__drawer.mdl-typography--text-center{:style => "position: fixed;"}
     %header
       %h1
-        %span.mdl-layout-title MONTAŻOWNIA TATUAŻU
+        %span.mdl-layout-title MONTAZOWNIA
     %nav.mdl-navigation
       =partial("layouts/main/nav_links")
       =partial("layouts/main/language_choice-mobile")
