--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -19,7 +19,7 @@ additional_javascripts:
           :data_index => index)
 
 %dialog.mdl-dialog.dialog-content
-  .mdl-dialog__content.centered-wrapper
+  .mdl-dialog__content.halign-wrapper.valign-wrapper
     %img.dialog-image.dialogImg
-  .mdl-dialog__actions.centered-wrapper
+  .mdl-dialog__actions.halign-wrapper.valign-wrapper
     %button.mdl-button.closeDialog{:type => "button"}=t("dialogs.close")
