--- a/site/source/layouts/main/_head.html.haml
+++ b/site/source/layouts/main/_head.html.haml
@@ -12,6 +12,8 @@
 -get_fonts.each do |font|
   %link{:rel=>:stylesheet, :type => :"text/plain", :href => "#{font}"}
 
+%link{:rel=>:stylesheet, :type => :"text/css", :href => "https://fonts.googleapis.com/icon?family=Material+Icons"}
+
 -['16x16', '32x32', '96x96'].each do |icon_size|
   %link{:rel => 'icon', :type => 'image/png', :sizes => '16x16', :href => "/assets/images/favicons/favicon-#{icon_size}.png"}
 
