--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -13,7 +13,7 @@ additional_javascripts:
   -get_faq_list.each do |item|
     %article.question
       %h4.question__title.showAnswer
-        %i.material-icons.question__title__icon.rotateIcon add
+        %i.material-icons.question__title__icon.rotateIcon keyboard_arrow_down
         %strong=item.question
       %p.question__answer.answerShown
         =item.answer
