--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -4,7 +4,7 @@ ordinal: "4"
 dont_translate_header: true
 header: "F.A.Q."
 additional_javascripts:
-  - "faq.js"
+  - src: "faq.js"
 ---
 %section
   %header
