--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -4,7 +4,7 @@ ordinal: "2"
 dont_translate_header: true
 header: "Portfolio"
 additional_javascripts:
-  - "portfolio.js"
+  - src: "portfolio.js"
 ---
 %section.portfolio
   %header
