--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -8,7 +8,7 @@ additional_javascripts:
 ---
 %section
   %header
-    %h3.section__header PYTANIA I ODPOWIEDZI
+    %h3.section__header =t("faq.header")
   .section__header-separotor
   -get_faq_list.each do |item|
     %article.question
