--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -14,19 +14,7 @@ header: "Widzę, że chcesz"
 
 %section
   %header
-    %h2 Zespół
+    %h2 Kim jesteśmy?
     %h3
-      %strong Tutaj krótkie info o nas, kim jesteśmy i co robimy
-  %p tutaj dopisane już trochę bardziej szczegółowo
-%section
-  %header
-    %h2 Historia
-    %h3
-      %strong i znowu kilka zdań o tym jak to się zaczęło
-  %p A potem jak się rozwijało
-%section
-  %header
-    %h2 Montaż
-    %h3
-      %strong krótki opis idei dziarania
-  %p i rozwinięcie myśli
+      %strong W 2014 roku po Poznaniu rozniosła się wieść: "Hej ludzie! Lena robi dziary u siebie na chacie"
+  %p Nie musiało minąć dużo więcej czasu niż rok, by zauważyć, że ta spontaniczna akcja bardzo szybko przerodziła się w profesjonalny salon tatuażu. Na różanej pojawiało się coraz więcej ludzi, a wraz z ich wizytami powstała też "Montażownia Tatuażu", do której niedługo później dołączył Boguś ze swoimi kolczykami oraz laserem. Od początku przyświeca nam idea "Widzę, że chcesz", która swym wszechwiedzącym okiem przewiduje oczekiwania odwiedzających nas ludzi. Tutaj nie ma masówy -- regułą jest, że jeżeli robimy sesję, to studio jest tylko dla jednej osoby. Rysujemy tak długo dopóki projekt nie odda zamysłu, czasami zamówimy sobie razem pizzę, a po wszystkim wspólnie wypijemy piwko. Zawsze zależy nam na tym, by ludzie wychodzący z Montażowni doskonale rozumieli co im właśnie zrobiliśmy na skórze i potrafili zadbać o swój nowy tatuaż, tak by wyglądał świeżo jeszcze przez długi czas.
